# catalog-nl-open-data

./: README.md  create_kumu_file.ipynb  pyproject.toml
.ipynb_checkpoints/: create_kumu_file-checkpoint.ipynb
kumu_data/: v3_catalog.json
