[tool.poetry]
name = "catalog-nl-open-data"
version = "0.1.0"
description = ""
authors = ["Amit Gal <amitgalmail@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
ipykernel = "^5.5.0"
dask = {extras = ["bag"], version = "^2021.3.0"}
statline-bq = {git = "https://www.github.com/dataverbinders/statline-bq"}
pandas = "^1.2.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
